# mastishk

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: usage.md
examples/: basic.rs
scripts/: bench-history.sh
src/: autonomic.rs  biochemistry.rs  brain.rs  bridge.rs  chronobiology.rs  circuit.rs  coupling.rs  dmn.rs  eeg.rs  error.rs  gut_brain.rs  hpa.rs  inflammation.rs  lib.rs  logging.rs  neurotransmitter.rs  pharmacology.rs  receptor.rs  regions.rs  sleep.rs  spiking.rs
tests/: integration.rs
